--- a/css/styles.css
+++ b/css/styles.css
@@ -49,13 +49,15 @@ body {
   z-index: 111;
 }
 
-.clock .hour {
+.clock .hour,
+.clock .minute,
+.clock .second {
   position: absolute;
 }
 
-.clock .hour .hours {
-  width: 110px;
-  height: 110px;
+.clock .hours,
+.clock .minutes,
+.clock .seconds {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -66,7 +68,12 @@ body {
   border-radius: 50%;
 }
 
-.clock .hour .hours::before {
+.clock .hours {
+  width: 110px;
+  height: 110px;
+}
+
+.clock .hours::before {
   content: '';
   position: absolute;
   width: 8px;
@@ -76,24 +83,12 @@ body {
   border-radius: 2px 2px 0 0;
 }
 
-.clock .minute {
-  position: absolute;
-}
-
-.clock .minute .minutes {
+.clock .minutes {
   width: 170px;
   height: 170px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  position: relative;
-  border-radius: 50%;
 }
 
-.clock .minute .minutes::before {
+.clock .minutes::before {
   content: '';
   position: absolute;
   width: 4px;
@@ -103,24 +98,12 @@ body {
   border-radius: 1px 1px 0 0;
 }
 
-.clock .second {
-  position: absolute;
-}
-
-.clock .second .seconds {
+.clock .seconds {
   width: 210px;
   height: 210px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  position: relative;
-  border-radius: 50%;
 }
 
-.clock .second .seconds::before {
+.clock .seconds::before {
   content: '';
   position: absolute;
   width: 2px;
